--- a/frontend/src/views/main/Main.module.scss
+++ b/frontend/src/views/main/Main.module.scss
@@ -24,8 +24,8 @@
         .slider {
             width              : 30%;
             max-width          : 600px;
-            height             : 100%;
-            // overflow        : auto; // Causes the toggle button to disappear
+            min-width          : 350px;
+            height             : calc(100vh - 150px);
             z-index            : 100;
             background-color   : $primary-color;
             box-shadow         : 4px -4px 10px 10px $shadow-color;
